# VEEPort-Espressif-ESP-WROVER-KIT-V4.1

./: .gh-copyright.template  .gh.keep_binary  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.rst  Jenkinsfile_9C5H4  Jenkinsfile_HDAHT  LICENSE.txt  README.md  README.rst  RELEASE_NOTES.rst
ESP32-WROVER-Xtensa-FreeRTOS-bsp/: .project
ESP32-WROVER-Xtensa-FreeRTOS-bsp/Drivers/: README_UPDATE_ESP-IDF.rst  systemview-microej.patch
ESP32-WROVER-Xtensa-FreeRTOS-bsp/Projects/coremark/: .cproject  Makefile  sdkconfig
ESP32-WROVER-Xtensa-FreeRTOS-bsp/Projects/coremark/main/: component.mk  coremark.c
ESP32-WROVER-Xtensa-FreeRTOS-bsp/Projects/microej/: Makefile  README.rst  cco_async_select.properties  cco_bsp-microej-async-worker.properties  cco_esp_idf.properties  cco_net-ssl-mbedtls.properties  cco_osal-FreeRTOS.properties  cco_osal-headers.properties  cco_trace-systemview.properties  partitions_default.csv  partitions_no_ota_no_systemview.csv  sdkconfig.default  sdkconfig_no_ota_no_systemview
ESP32-WROVER-Xtensa-FreeRTOS-bsp/Projects/microej/main/: Makefile.projbuild  component.mk  microej.c
ESP32-WROVER-Xtensa-FreeRTOS-bsp/Projects/microej/scripts/: build.bat  build.sh  build_no_ota_no_systemview.bat  run.sh  (+7 more)
ESP32-WROVER-Xtensa-FreeRTOS-bsp/Projects/unit_tests/: Makefile
ESP32-WROVER-Xtensa-FreeRTOS-bsp/projects/coremark/: .project  CMakeLists.txt  build.bat  run.bat  sdkconfig
ESP32-WROVER-Xtensa-FreeRTOS-bsp/projects/coremark/main/: CMakeLists.txt  coremark.c
ESP32-WROVER-Xtensa-FreeRTOS-bsp/projects/microej/: CMakeLists.txt  README.rst  cco_async_select.properties  cco_bsp-microej-async-worker.properties  cco_bsp-microej-main.properties  cco_ecom-network-generic.properties  cco_ecom-wifi-generic.properties  cco_fs-fatfs.properties  cco_fs-generic.properties  cco_libwebp.properties  cco_microej-pool.properties  cco_microej-time-freertos.properties  cco_microui.properties  cco_mjvm-freertos.properties  cco_net-bsd.properties  cco_net-dns-lwip.properties  cco_net-lwip.properties  cco_net-ssl-mbedtls.properties  cco_osal-FreeRTOS.properties  cco_osal-headers.properties  cco_security-mbedtls.properties  cco_trace-systemview.properties  cco_watchdog-timer-checkpoint-freertos.properties  cco_watchdog-timer-generic.properties  partitions_ota_systemview.csv  sdkconfig_no_ota_no_systemview  sdkconfig_ota_systemview
ESP32-WROVER-Xtensa-FreeRTOS-bsp/projects/microej/main/: CMakeLists.txt  microej.c  project_include.cmake  rename-sections.py
ESP32-WROVER-Xtensa-FreeRTOS-bsp/projects/unit_tests/: .cproject  Makefile  sdkconfig
ESP32-WROVER-Xtensa-FreeRTOS-configuration/: .project  CHANGELOG.md  ESP32WROVER.platform  LICENSE.txt  README.md  configuration.xml  module.ant  module.ivy  module.properties  override.module.ant
ESP32-WROVER-Xtensa-FreeRTOS-configuration/bsp/: bsp.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/device/: device.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/display/: display.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/documentation/: README.md
ESP32-WROVER-Xtensa-FreeRTOS-configuration/dropins/include/: LLCOMM.h  LLCOMM_BUFFERED_CONNECTION_impl.h  LLCOMM_CONNECTION.h  LLCOMM_CUSTOM_CONNECTION.h  LLCOMM_CUSTOM_CONNECTION_impl.h
ESP32-WROVER-Xtensa-FreeRTOS-configuration/dropins/lib/: ecom-comm.ilink
ESP32-WROVER-Xtensa-FreeRTOS-configuration/dropins/link/: ecom-comm-gt.lscf  ecom-comm.lscf
ESP32-WROVER-Xtensa-FreeRTOS-configuration/dropins/scripts/: deployToolExternalRun.microejTool
ESP32-WROVER-Xtensa-FreeRTOS-configuration/ecom-comm/: bsp.xml  ecom-comm.xml
ESP32-WROVER-Xtensa-FreeRTOS-configuration/frontpanel/: frontpanel.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/fs/: fs.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/microui/: microui.xml
ESP32-WROVER-Xtensa-FreeRTOS-configuration/mjvm/: mjvm.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/net/: net.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/testsuites/core/: README.md  config.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/testsuites/ecom-wifi/: README.md  config.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/testsuites/fs/: README.md  config.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/testsuites/net/: README.md  config.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/testsuites/security/: README.md  config.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/testsuites/ssl/: README.md  config.properties
ESP32-WROVER-Xtensa-FreeRTOS-configuration/testsuites/ui/: README.md
ESP32-WROVER-Xtensa-FreeRTOS-configuration/testsuites/watchdog-timer/: README.md  config.properties
ESP32-WROVER-Xtensa-FreeRTOS-fp/: .classpath  .project  module.ivy
ESP32-WROVER-Xtensa-FreeRTOS-validation/: .project
ESP32-WROVER-Xtensa-FreeRTOS-validation/tests/: README.rst
ESP32-WROVER-Xtensa-FreeRTOS-validation/tests/core/: README.rst
ESP32-WROVER-Xtensa-FreeRTOS-validation/tests/ecom-wifi/: README.rst
ESP32-WROVER-Xtensa-FreeRTOS-validation/tests/fs/: README.rst
ESP32-WROVER-Xtensa-FreeRTOS-validation/tests/net/: README.rst
ESP32-WROVER-Xtensa-FreeRTOS-validation/tests/security/: README.rst
ESP32-WROVER-Xtensa-FreeRTOS-validation/tests/ssl/: README.rst
ESP32-WROVER-Xtensa-FreeRTOS-validation/tests/ui/: README.rst
ESP32WROVER-Platform-GNUv52b96_xtensa-esp32-psram-1.6.2/: .project
ESP32WROVER-Platform-GNUv52b96_xtensa-esp32-psram-1.7.1/: .project
ESP32WROVER-Platform-GNUv52b96_xtensa-esp32-psram-1.8.0/: .project
ESP32WROVER-Platform-GNUv52b96_xtensa-esp32-psram-1.8.1/: .project
ESP32WROVER-Platform-GNUv52b96_xtensa-esp32-psram-1.8.2/: .project
ESP32WROVER-Platform-GNUv52b96_xtensa-esp32-psram-1.8.3/: .project
ESP32WROVER-Platform-GNUv52b96_xtensa-esp32-psram-1.8.4/: .project
ESP32WROVER-Platform-GNUv84_xtensa-esp32-psram-2.0.0/: .project
ESP32WROVER-Platform-GNUv84_xtensa-esp32-psram-2.1.0/: .project
ESP32WROVER-Platform-GNUv84_xtensa-esp32-psram-2.2.0/: .project
ESP32WROVER-Platform-GNUv84_xtensa-esp32-psram-2.2.1/: .project
docs/zn_CH/: README_CN.rst
(+613 files in other folders)
